[package]
name = "xivar"
version = "0.4.0"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Manage your local scientific library"
repository = "https://github.com/Mountlex/xivar"
readme = "README.md"
keywords = ["arXiv", "cli", "dblp", "download", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
dirs-next = "2.0.0"
serde = { version = "1.0.118", features = ["derive"]}
anyhow = "1.0.35"
bincode = "1.3.1"
tempfile = "3.1.0"
clap = { version = "3.1.6", features = ["derive"] }
open = "2.1.1"
itertools = "0.10.3"
console = "0.15.0"
config = "0.12.0"
roxmltree = "0.14.1"
lopdf = "0.27.0"
async-trait = "0.1.52"
proc-macro2 = "1.0.36"
termion = "1.5.6"
log = "0.4.11"
chrono = "0.4"
fern = { version = "0.6.0", features = ["colored"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.8"