[package]
name = "xivar"
version = "0.5.1"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Manage your local scientific library"
repository = "https://github.com/Mountlex/xivar"
readme = "README.md"
keywords = ["arXiv", "cli", "dblp", "download", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
dirs-next = "2.0.0"
serde = { version = "1.0.152", features = ["derive"]}
anyhow = "1.0.68"
bincode = "1.3.3"
tempfile = "3.3.0"
clap = { version = "4.0.32", features = ["derive"] }
open = "3.2.0"
itertools = "0.10.5"
console = "0.15.4"
config = "0.13.3"
roxmltree = "0.16.0"
lopdf = "0.29.0"
async-trait = "0.1.60"
proc-macro2 = "1.0.49"
termion = "2.0.1"
log = "0.4.17"
chrono = "0.4.23"
fern = { version = "0.6.1", features = ["colored"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.0", features = ["full"] }
futures = "0.3.25"
cli-clipboard = "0.4.0"
